@@ -1,4 +1,4 @@
-Copyright 2009, Junta de Andalucía.
+<AUTHOR>.
 
 This program is free software; you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
